# x402-sdk

./: .gitignore  .pypirc.template  .x402-agent.json  .x402.config.json  CLEANUP_SUMMARY.md  CONVENIENCE_FEATURES.md  GITHUB_PUBLISHING.md  LAUNCH_ANNOUNCEMENT.md  LICENSE  PUBLISHING.md  PYPI_PUBLISHING.md  README.md  UPLOAD_TO_PYPI.sh  agent.py  final_demo.py  main.py  package.json  pyproject.toml  simple_demo.py  test_integration.py  test_real_scenario.py  tsconfig.json  verify_chains.py  x402-protocol-research.md
.github/workflows/: ci.yml  test.yml
examples/: ultimate_demo.py
scripts/: test_all.py
test-api/: app.py  requirements.txt
test-api/.x402/: config.json
